
- Issue #26182: Fix a refleak in code that raises DeprecationWarning.

- Issue #28721: Fix asynchronous generators aclose() and athrow() to
  handle StopAsyncIteration propagation properly.

- Issue #26110: Speed-up method calls: add LOAD_METHOD and CALL_METHOD
  opcodes.

Extension Modules
-----------------

- Issue #29169: Update zlib to 1.2.11.

Library
-------
- bpo-29692: Fixed arbitrary unchaining of RuntimeError exceptions in 
  contextlib.contextmanager.
  Patch by Siddharth Velankar.

- bpo-26187: Test that sqlite3 trace callback is not called multiple
  times when schema is changing.  Indirectly fixed by switching to 
  use sqlite3_prepare_v2() in bpo-9303.  Patch by Aviv Palivoda.

- bpo-30017: Allowed calling the close() method of the zip entry writer object
  multiple times.  Writing to a closed writer now always produces a ValueError.

- bpo-29998: Pickling and copying ImportError now preserves name and path
  attributes.

- bpo-29995: re.escape() now escapes only regex special characters.

- bpo-29962: Add math.remainder operation, implementing remainder
  as specified in IEEE 754.

- bpo-29649: Improve struct.pack_into() exception messages for problems
  with the buffer size and offset.  Patch by Andrew Nester.

- bpo-29654: Support If-Modified-Since HTTP header (browser cache).  Patch
  by Pierre Quentel.

- bpo-29931: Fixed comparison check for ipaddress.ip_interface objects.
  Patch by Sanjay Sundaresan.

- bpo-29953: Fixed memory leaks in the replace() method of datetime and time
  objects when pass out of bound fold argument.

- bpo-29942: Fix a crash in itertools.chain.from_iterable when encountering
  long runs of empty iterables.

- bpo-10030: Sped up reading encrypted ZIP files by 2 times.

- bpo-29204: Element.getiterator() and the html parameter of XMLParser() were
  deprecated only in the documentation (since Python 3.2 and 3.4 correspondintly).
  Now using them emits a deprecation warning.
